# rflcpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build_log.txt
cmake/: rflcppConfig.cmake.in
docs/: CMakeLists.txt  any.md  attributes.md  cli.md  extending.md  formats.md  getting_started.md  index.md  invoke.md  json.md  patch.md  reflection.md  registry.md  schema.md  validation.md
examples/: CMakeLists.txt
examples/01_basic_reflection/: main.cpp
examples/02_json_roundtrip/: main.cpp
examples/03_nested_types/: main.cpp
examples/04_validation/: main.cpp
examples/05_named_fields/: main.cpp
examples/06_custom_codec/: main.cpp
examples/07_enums/: main.cpp
examples/08_attributes/: main.cpp
examples/09_variants/: main.cpp
examples/10_derive_and_schema/: main.cpp
examples/11_schema_metadata/: main.cpp
examples/12_binary_formats/: main.cpp
examples/13_cli_parser/: main.cpp
examples/14_reflected_any/: main.cpp
examples/15_patch_and_diff/: main.cpp
examples/16_type_registry/: main.cpp
examples/17_method_invocation/: main.cpp
examples/18_direct_json_serialization/: main.cpp
examples/19_embedded_policies_and_constexpr_schema/: main.cpp
include/rflcpp/: any.hpp  attributes.hpp  cbor.hpp  cli.hpp  concepts.hpp  derive.hpp  enum_meta.hpp  error.hpp  invoke.hpp  json.hpp  json_direct.hpp  msgpack.hpp  patch.hpp  policy.hpp  reflect.hpp  registry.hpp  result.hpp  rflcpp.hpp  schema.hpp  toml.hpp  validation.hpp  xml.hpp  yaml.hpp
include/rflcpp/detail/: serialization_common.hpp
src/: error.cpp  internal_common.hpp  version.cpp
tests/: CMakeLists.txt  test_any.cpp  test_attributes.cpp  test_cli.cpp  test_derive.cpp  test_enum.cpp  test_file_io.cpp  test_invoke.cpp  test_json.cpp  test_json_direct.cpp  test_msgpack.cpp  test_patch.cpp  test_policy.cpp  test_policy_embedded.cpp  test_reflect.cpp  test_registry.cpp  test_schema.cpp  test_schema_constexpr.cpp  test_toml.cpp  test_validation.cpp  test_variant.cpp  test_xml.cpp  test_yaml.cpp
